Correctly align 'one' dot

--- a/src/App.css
+++ b/src/App.css
@@ -23,12 +23,9 @@
 .die {
   display: flex;
   flex-wrap: wrap;
-  font-size: 5rem;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 700;
   height: 100px;
   width: 100px;
   border: 5px solid rgb(222, 222, 222);
@@ -47,6 +44,10 @@
 
 .top-left {
   align-self: flex-start;
+}
+
+.center {
+  margin: auto;
 }
 
 .bottom-right {
